# dify-kg-ext

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  request_api.py
.github/: ragflow.yml
.github/workflows/: build_and_push.yml  ragflow.yml
dify_kg_ext/: __init__.py  api.py  dataclasses.py  docling.py  es.py  ragflow_service.py  worker.py
dify_kg_ext/adapters/: __init__.py  siliconflow.py  vllm.py  xinference.py
dify_kg_ext/dataclasses/: __init__.py  dify_ext.py  doc_parse.py  index.py
dify_kg_ext/entrypoints/: api.py  worker.py
docs/: Dify外部知识库API.md  知识分片接口.md  知识管理接口.md
scripts/: export_images_from_compose_file.sh  request_api.py
tests/: README.md  conftest.py  test_api.py  test_es.py  test_worker.py
tests/test_adapters/: test_siliconflow.py  test_xinference.py
tests/test_entrypoints/: test_api.py
