[project]
name = "knowledge-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache[redis]>=0.12.3",
    "aiohttp>=3.11.8",
    "celery>=5.5.3",
    "click>=8.1.7",
    "docling>=2.37.0",
    "elasticsearch==8.11.*",
    "fastapi>=0.115.5",
    "httpx>=0.28.0",
    "openai>=1.55.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "prompt-toolkit>=3.0.48",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.19",
    "redis>=5.2.0",
    "requests>=2.32.3",
    "tiktoken>=0.9.0",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.7",
    "autoflake>=2.3.1",
    "black>=24.10.0",
    "ipdb>=0.13.13",
    "isort>=5.13.2",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "tqdm>=4.67.1",
    "aresponses>=3.0.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
addopts = "--disable-warnings"
